# work-plan-manager

./: .gitignore  .prettierignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: QuadrantSelect.vue  StatusBadge.vue  TaskForm.vue  TaskList.vue  index.ts
src/components/case/: CaseProgressForm.vue  CaseProgressList.vue  SubjectAmountChart.vue
src/components/contract/: ContractReviewForm.vue  ContractReviewList.vue  RiskAnalysisChart.vue  RiskBadge.vue
src/database/: index.ts
src/database/migrations/: V1__initial.ts  V2__legal_system.ts  V3__work_task_migration.ts  index.ts
src/database/repositories/: caseRepository.ts  contractRepository.ts  taskRepository.ts  userRepository.ts
src/router/: index.ts
src/stores/: caseStore.ts  contractStore.ts  index.ts  settingStore.ts  taskStore.ts  userStore.ts
src/types/: case.ts  common.ts  contract.ts  index.ts  sql.js.d.ts  task.ts  user.ts
src/utils/: documentParser.ts  export.ts  index.ts  logger.ts  notification.ts
src/views/: Dashboard.vue  Monthly.vue  Settings.vue  Statistics.vue  TaskList.vue  Weekly.vue
src/views/auth/: Login.vue
src/views/legal/case/: CaseDetail.vue  CaseForm.vue  CaseList.vue
src/views/legal/contract/: ContractDetail.vue  ContractForm.vue  ContractList.vue
src/views/legal/dashboard/: LegalDashboard.vue
src/views/system/department/: DepartmentList.vue
(+2 files in other folders)
